<resources>
    <string name="app_name">CookingCalculator</string>
    <string name="cooking">Cooking</string>
    <string name="conversion_calculator">Conversion Calculator</string>
    <string name="button">Button</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="value_to_convert">Value to convert</string>
    <string name="convert">Convert</string>
    <string name="result">Result</string>
    <string name="_0_0">0.0</string>
</resources>